force-app/main/default/objects/Sales_Agreement__c/fields/Accessories_Credit__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Credit__c</fullName>
    <label>Accessories Credit</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>