force-app/main/default/objects/Sales_Agreement__c/fields/Accessories_Discount__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Discount__c</fullName>
    <label>Accessories Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>