force-app/main/default/objects/Sales_Agreement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Agreements (Account)</relationshipLabel>
    <relationshipName>Sales_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>