force-app/main/default/objects/Sales_Agreement__c/fields/AcknowledgementCOE__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgementCOE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgement COE</label>
    <type>Checkbox</type>
</CustomField>