force-app/main/default/objects/Sales_Agreement__c/fields/AcknowledgementDeposits__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgementDeposits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgement Deposits</label>
    <type>Checkbox</type>
</CustomField>