force-app/main/default/objects/Sales_Agreement__c/fields/AcknowledgementPersonalData__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgementPersonalData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgement Personal Data</label>
    <type>Checkbox</type>
</CustomField>