force-app/main/default/objects/Sales_Agreement__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPC</fullName>
                <label>Private</label>
            </value>
            <value>
                <fullName>CPC</fullName>
                <label>Company PC</label>
            </value>
            <value>
                <fullName>CCV</fullName>
                <label>Company CV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>