force-app/main/default/objects/Sales_Agreement__c/fields/ARF__c.field-meta.xml
<CustomField>
    <fullName>ARF__c</fullName>
    <description>ARF for COE</description>
    <label>ARF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>