force-app/main/default/objects/Sales_Agreement__c/fields/ARF_Payable__c.field-meta.xml
<CustomField>
    <fullName>ARF_Payable__c</fullName>
    <label>ARF Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>