force-app/main/default/objects/Sales_Agreement__c/fields/Bank_support_document__c.field-meta.xml
<CustomField>
    <fullName>Bank_support_document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bank supporting document  - Cover note, Tax Invoice, LTA log car(Acknowledgment Page)</description>
    <inlineHelpText>Bank supporting document  - Cover note, Tax Invoice, LTA log car(Acknowledgment Page)</inlineHelpText>
    <label>Bank support document</label>
    <type>Checkbox</type>
</CustomField>