force-app/main/default/objects/Sales_Agreement__c/fields/Bid_11_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bid_11_Amount__c</fullName>
    <label>Bid 11 Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>