force-app/main/default/objects/Sales_Agreement__c/fields/Bid_Price__c.field-meta.xml
<CustomField>
    <fullName>Bid_Price__c</fullName>
    <label>Bid Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>