force-app/main/default/objects/Sales_Agreement__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <formula>if(Opportunity__r.Lead__c != null, Opportunity__r.Lead__r.Birthdate__c, IF(Opportunity__r.Contact_Person__c != null, Opportunity__r.Contact_Person__r.Birthdate, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>