force-app/main/default/objects/Sales_Agreement__c/fields/Building_NameMA__c.field-meta.xml
<CustomField>
    <fullName>Building_NameMA__c</fullName>
    <label>Building Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>