force-app/main/default/objects/Sales_Agreement__c/fields/Building_NameRA__c.field-meta.xml
<CustomField>
    <fullName>Building_NameRA__c</fullName>
    <label>Building Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>