force-app/main/default/objects/Sales_Agreement__c/fields/Car_Ready_Date__c.field-meta.xml
<CustomField>
    <fullName>Car_Ready_Date__c</fullName>
    <label>Car Ready Date</label>
    <type>Date</type>
</CustomField>