force-app/main/default/objects/Sales_Agreement__c/fields/Chassis_No__c.field-meta.xml
<CustomField>
    <fullName>Chassis_No__c</fullName>
    <formula>Stock_Reservation__r.Vehicle_Master__r.Chassis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chassis No</label>
    <type>Text</type>
</CustomField>