force-app/main/default/objects/Sales_Agreement__c/fields/CIF__c.field-meta.xml
<CustomField>
    <fullName>CIF__c</fullName>
    <formula>Stock_Reservation__r.Vehicle_Master__r.OMV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CIF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>