force-app/main/default/objects/Sales_Agreement__c/fields/CIF_for_COE__c.field-meta.xml
<CustomField>
    <fullName>CIF_for_COE__c</fullName>
    <label>CIF for COE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>