force-app/main/default/objects/Sales_Agreement__c/fields/COE__c.field-meta.xml
<CustomField>
    <fullName>COE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>COE Expiry Email Notification will be sent out to the customer 1 month before the expiry date</inlineHelpText>
    <label>COE</label>
    <referenceTo>COE__c</referenceTo>
    <relationshipLabel>Sales Agreements</relationshipLabel>
    <relationshipName>Sales_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>