force-app/main/default/objects/Sales_Agreement__c/fields/COE_Package__c.field-meta.xml
<CustomField>
    <fullName>COE_Package__c</fullName>
    <label>COE Package</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Guaranteed COE</fullName>
            </value>
            <value>
                <fullName>Guaranteed COE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>