force-app/main/default/objects/Sales_Agreement__c/fields/COE_Refund__c.field-meta.xml
<CustomField>
    <fullName>COE_Refund__c</fullName>
    <label>COE Refund</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>