force-app/main/default/objects/Sales_Agreement__c/fields/COE_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>COE_Submission_Date__c</fullName>
    <description>Date that the COE is submitted for bidding</description>
    <label>COE Submission Date</label>
    <type>DateTime</type>
</CustomField>