force-app/main/default/objects/Sales_Agreement__c/fields/COEThresHold__c.field-meta.xml
<CustomField>
    <fullName>COEThresHold__c</fullName>
    <label>COE ThresHold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>