force-app/main/default/objects/Sales_Agreement__c/fields/Cost_of_Accessories_Traded_Sold__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Accessories_Traded_Sold__c</fullName>
    <label>Cost of Accessories Traded/Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>