force-app/main/default/objects/Sales_Agreement__c/fields/Cost_of_Standard_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Standard_Accessories__c</fullName>
    <label>Cost of Standard Accessories</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>