force-app/main/default/objects/Sales_Agreement__c/fields/CPF_on_Comm__c.field-meta.xml
<CustomField>
    <fullName>CPF_on_Comm__c</fullName>
    <formula>Proposed_Commission__c * 17 / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPF on Comm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>