force-app/main/default/objects/Sales_Agreement__c/fields/CPF_on_Comm_for_COE__c.field-meta.xml
<CustomField>
    <fullName>CPF_on_Comm_for_COE__c</fullName>
    <label>CPF on Comm for COE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>