force-app/main/default/objects/Sales_Agreement__c/fields/CUM_FIRSTNAME__c.field-meta.xml
<CustomField>
    <fullName>CUM_FIRSTNAME__c</fullName>
    <label>Customer Full Nam (not used)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>