force-app/main/default/objects/Sales_Agreement__c/fields/CVES__c.field-meta.xml
<CustomField>
    <fullName>CVES__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CVES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>