force-app/main/default/objects/Sales_Agreement__c/fields/Default_Commission__c.field-meta.xml
<CustomField>
    <fullName>Default_Commission__c</fullName>
    <formula>IF(AND(TEXT(Branch_Code__c) = &quot;CCF&quot;, DS_Model__c = true), &quot;1900&quot;,
IF(AND(TEXT(Branch_Code__c) = &quot;CCF&quot;, DS_Model__c = false), &quot;720&quot;,
IF(AND(Stock_Reservation__r.Model_Code__r.Engine_Capacity__c &lt;1601,Stock_Reservation__r.Model_Code__r.BHP__c &lt; 131),&quot;600&quot;,
&quot;900&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Commission</label>
    <type>Text</type>
</CustomField>