force-app/main/default/objects/Sales_Agreement__c/fields/Defect_Header_URL__c.field-meta.xml
<CustomField>
    <fullName>Defect_Header_URL__c</fullName>
    <label>Defect Header URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>