force-app/main/default/objects/Sales_Agreement__c/fields/DeliveryFrom__c.field-meta.xml
<CustomField>
    <fullName>DeliveryFrom__c</fullName>
    <formula>CASE
(MONTH(Expected_Delivery_From__c), 1, &quot;JAN&quot;, 2, &quot;FEB&quot;, 3, &quot;MAR&quot;,  4, &quot;APR&quot;,  5, &quot;MAY&quot;,  6, &quot;JUN&quot;, 7, &quot;JUL&quot;, 8, &quot;AUG&quot;, 9, &quot;SEP&quot;, 10, &quot;OCT&quot;, 11, &quot;NOV&quot;, 12, &quot;DEC&quot;, &quot;None&quot;)
&amp; &quot; &quot; &amp; 
TEXT(YEAR(Expected_Delivery_From__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery From</label>
    <type>Text</type>
</CustomField>