force-app/main/default/objects/Sales_Agreement__c/fields/DocStatusAcknowledgementPage__c.field-meta.xml
<CustomField>
    <fullName>DocStatusAcknowledgementPage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgement Page</label>
    <type>Checkbox</type>
</CustomField>