force-app/main/default/objects/Sales_Agreement__c/fields/DocStatusCoverNote__c.field-meta.xml
<CustomField>
    <fullName>DocStatusCoverNote__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Insurance Approval Notification will be sent to the customer</inlineHelpText>
    <label>Cover Note</label>
    <type>Checkbox</type>
</CustomField>