force-app/main/default/objects/Sales_Agreement__c/fields/DocStatusGMSCreditNote__c.field-meta.xml
<CustomField>
    <fullName>DocStatusGMSCreditNote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GMS Credit Note</label>
    <type>Checkbox</type>
</CustomField>