force-app/main/default/objects/Sales_Agreement__c/fields/DocStatusRAPurchaseGST__c.field-meta.xml
<CustomField>
    <fullName>DocStatusRAPurchaseGST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RA Purchase GST</label>
    <type>Checkbox</type>
</CustomField>