force-app/main/default/objects/Sales_Agreement__c/fields/DocStatusReleaseLetter__c.field-meta.xml
<CustomField>
    <fullName>DocStatusReleaseLetter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release Letter</label>
    <type>Checkbox</type>
</CustomField>