force-app/main/default/objects/Sales_Agreement__c/fields/DocStatusSalesTaxInvoice__c.field-meta.xml
<CustomField>
    <fullName>DocStatusSalesTaxInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Tax Invoice</label>
    <type>Checkbox</type>
</CustomField>