force-app/main/default/objects/Sales_Agreement__c/fields/DocStatusSL80Bill__c.field-meta.xml
<CustomField>
    <fullName>DocStatusSL80Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL80 Bill</label>
    <type>Checkbox</type>
</CustomField>