force-app/main/default/objects/Sales_Agreement__c/fields/DownPayment__c.field-meta.xml
<CustomField>
    <fullName>DownPayment__c</fullName>
    <formula>Vehicle_Purchase_Price__c - Amount_to_Finance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Down Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>