force-app/main/default/objects/Sales_Agreement__c/fields/EEAI__c.field-meta.xml
<CustomField>
    <fullName>EEAI__c</fullName>
    <label>EEAI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>