force-app/main/default/objects/Sales_Agreement__c/fields/emailaddress__c.field-meta.xml
<CustomField>
    <fullName>emailaddress__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>