force-app/main/default/objects/Sales_Agreement__c/fields/Expected_Delivery_Month__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Month__c</fullName>
    <label>Expected Delivery Month</label>
    <type>Date</type>
</CustomField>