force-app/main/default/objects/Sales_Agreement__c/fields/Expected_Delivery_To__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_To__c</fullName>
    <label>Expected Delivery To</label>
    <type>Date</type>
</CustomField>