force-app/main/default/objects/Sales_Agreement__c/fields/Finance_Company__c.field-meta.xml
<CustomField>
    <fullName>Finance_Company__c</fullName>
    <formula>Finance_Company_Lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Company</label>
    <type>Text</type>
</CustomField>