force-app/main/default/objects/Sales_Agreement__c/fields/Finance_Company_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Finance_Company_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Company Lookup</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Business_Associate_Master__c.BAM_TYPE__c</field>
            <operation>equals</operation>
            <value>FIN</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Business_Associate_Master__c</referenceTo>
    <relationshipLabel>Sales Agreements</relationshipLabel>
    <relationshipName>Sales_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>