force-app/main/default/objects/Sales_Agreement__c/fields/Full_Settlement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Full_Settlement_Amount__c</fullName>
    <label>Full Settlement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>