force-app/main/default/objects/Sales_Agreement__c/fields/Full_Settlement_Amount_PDF__c.field-meta.xml
<CustomField>
    <fullName>Full_Settlement_Amount_PDF__c</fullName>
    <formula>IF(Full_Settlement_Amount__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;S$ &quot; &amp;
IF(ABS(Full_Settlement_Amount__c ) &gt;= 1000000, TEXT(FLOOR(ABS(Full_Settlement_Amount__c ) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(Full_Settlement_Amount__c ) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Full_Settlement_Amount__c ) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(Full_Settlement_Amount__c ))), 3) &amp; &quot;.&quot; &amp;
IF(MOD(ABS(Full_Settlement_Amount__c ) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(Full_Settlement_Amount__c ) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(Full_Settlement_Amount__c ) , 1), 2) * 100, 99))) &amp;
IF(Full_Settlement_Amount__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Settlement Amount PDF</label>
    <type>Text</type>
</CustomField>