force-app/main/default/objects/Sales_Agreement__c/fields/GST_Charge__c.field-meta.xml
<CustomField>
    <fullName>GST_Charge__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GST_Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>