force-app/main/default/objects/Sales_Agreement__c/fields/Insurance_Company_In_House__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_In_House__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Company In House?</label>
    <type>Checkbox</type>
</CustomField>