force-app/main/default/objects/Sales_Agreement__c/fields/Insurance_Company_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Company Lookup</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Business_Associate_Master__c.BAM_TYPE__c</field>
            <operation>equals</operation>
            <value>INS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Business_Associate_Master__c</referenceTo>
    <relationshipLabel>Sales Agreements (Insurance Company Lookup)</relationshipLabel>
    <relationshipName>Sales_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>