force-app/main/default/objects/Sales_Agreement__c/fields/Insurance_Register_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Register_Vehicle__c</fullName>
    <label>Insurance Register  Vehicle</label>
    <length>10</length>
    <type>Text</type>
</CustomField>