force-app/main/default/objects/Sales_Agreement__c/fields/isSellerNotBuyer__c.field-meta.xml
<CustomField>
    <fullName>isSellerNotBuyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSellerNotBuyer</label>
    <type>Checkbox</type>
</CustomField>