force-app/main/default/objects/Sales_Agreement__c/fields/JIT_Day__c.field-meta.xml
<CustomField>
    <fullName>JIT_Day__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JIT Day</label>
    <referenceTo>JIT_Day__c</referenceTo>
    <relationshipLabel>Sales Agreements</relationshipLabel>
    <relationshipName>Sales_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>