force-app/main/default/objects/Sales_Agreement__c/fields/JIT_Status__c.field-meta.xml
<CustomField>
    <fullName>JIT_Status__c</fullName>
    <label>JIT Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>