force-app/main/default/objects/Sales_Agreement__c/fields/Last_save_on_form__c.field-meta.xml
<CustomField>
    <fullName>Last_save_on_form__c</fullName>
    <label>Last save on form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>VehiclePurchase</fullName>
            </value>
            <value>
                <fullName>Trade-In</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>