force-app/main/default/objects/Sales_Agreement__c/fields/Lock__c.field-meta.xml
<CustomField>
    <fullName>Lock__c</fullName>
    <description>Use this field to set the flag whether to lock the transaction based on the stage. 1 indicates to be locked.</description>
    <formula>IF(
(
CASE( TEXT(Stage__c),
&quot;Draft&quot;,0,
&quot;Booking&quot;,0,
&quot;Confirmation of Sale&quot;,1,
&quot;Request Registration&quot;,0,
&quot;Pending Registration&quot;,1,
&quot;Ready for Registration&quot;,1,
&quot;Car Collected&quot;,1,
&quot;Cancelled&quot;,1,
0
))=1,TRUE,FALSE)</formula>
    <label>Lock</label>
    <type>Checkbox</type>
</CustomField>