force-app/main/default/objects/Sales_Agreement__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <formula>if(Opportunity__r.Lead__c != null, Opportunity__r.Lead__r.MobilePhone, IF(Opportunity__r.Contact_Person__c != null, Opportunity__r.Contact_Person__r.MobilePhone, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile (Formula)</label>
    <type>Text</type>
</CustomField>