force-app/main/default/objects/Sales_Agreement__c/fields/ModelYear__c.field-meta.xml
<CustomField>
    <fullName>ModelYear__c</fullName>
    <formula>Stock_Reservation__r.Model_Year_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model Year</label>
    <type>Date</type>
</CustomField>