force-app/main/default/objects/Sales_Agreement__c/fields/Net_Transaction_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Transaction_Price__c</fullName>
    <description>Net Transaction Price for COE Treshold</description>
    <formula>RSP_And_Paid_Accessories__c +  Promo_Discount__c +  Accessories_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Transaction Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>