force-app/main/default/objects/Sales_Agreement__c/fields/New_Car_Added_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>New_Car_Added_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Car Added Email Sent?</label>
    <type>Checkbox</type>
</CustomField>