force-app/main/default/objects/Sales_Agreement__c/fields/NRIC_Number__c.field-meta.xml
<CustomField>
    <fullName>NRIC_Number__c</fullName>
    <label>NRIC Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>