force-app/main/default/objects/Sales_Agreement__c/fields/Open_Category_COE_Option__c.field-meta.xml
<CustomField>
    <fullName>Open_Category_COE_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Category COE Option</label>
    <type>Checkbox</type>
</CustomField>