force-app/main/default/objects/Sales_Agreement__c/fields/Open_COE_Quota_Premium__c.field-meta.xml
<CustomField>
    <fullName>Open_COE_Quota_Premium__c</fullName>
    <label>Open COE Quota Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>