force-app/main/default/objects/Sales_Agreement__c/fields/Opportunity_Channel__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Channel__c</fullName>
    <formula>Opportunity__r.Opportunity_Channel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Channel</label>
    <type>Text</type>
</CustomField>