force-app/main/default/objects/Sales_Agreement__c/fields/Original_Commcase_No__c.field-meta.xml
<CustomField>
    <fullName>Original_Commcase_No__c</fullName>
    <formula>Stock_Reservation__r.Vehicle_Master__r.Original_Commcase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commcase No</label>
    <type>Text</type>
</CustomField>