force-app/main/default/objects/Sales_Agreement__c/fields/Other_Direct_Cost__c.field-meta.xml
<CustomField>
    <fullName>Other_Direct_Cost__c</fullName>
    <formula>$Setup.COE_Threshold__c.Other_Direct_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Direct Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>