force-app/main/default/objects/Sales_Agreement__c/fields/Package_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Package_List_Price__c</fullName>
    <description>This field is updated when the sales agreement is created. 
Subsequence update will be from platform event and sales manager who has the right when package price change</description>
    <inlineHelpText>The List Price when the Sales Agreement is being created in VSMS</inlineHelpText>
    <label>Vehicle List Price (As of SA Created)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>