force-app/main/default/objects/Sales_Agreement__c/fields/Paid_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Paid_Accessories__c</fullName>
    <label>Paid Accessories</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>