force-app/main/default/objects/Sales_Agreement__c/fields/PrivateHire__c.field-meta.xml
<CustomField>
    <fullName>PrivateHire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrivateHire</label>
    <type>Checkbox</type>
</CustomField>