force-app/main/default/objects/Sales_Agreement__c/fields/Promo_Discount__c.field-meta.xml
<CustomField>
    <fullName>Promo_Discount__c</fullName>
    <label>Promo Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>