force-app/main/default/objects/Sales_Agreement__c/fields/Proposed_Commision__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Commision__c</fullName>
    <label>Proposed Commission (Wrong name)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>