force-app/main/default/objects/Sales_Agreement__c/fields/Proposed_Commission__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Commission__c</fullName>
    <label>Proposed Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>