force-app/main/default/objects/Sales_Agreement__c/fields/Rate_p_a__c.field-meta.xml
<CustomField>
    <fullName>Rate_p_a__c</fullName>
    <label>Rate(%p.a.)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>