force-app/main/default/objects/Sales_Agreement__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <inlineHelpText>Confirm the date with Customer</inlineHelpText>
    <label>Intended Registration Date</label>
    <type>Date</type>
</CustomField>